<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CrashDetection.Acitivities.EmergencyMenuActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergencyButton"
        android:id="@+id/emergencyButton"
        android:layout_below="@+id/emergencyText"
        android:layout_marginTop="69dp"
        android:layout_alignParentEnd="true"
        android:textSize="40dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="#ff0000"
        android:onClick="onEmergencyClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textCrashDetected"
        android:id="@+id/emergencyText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_alarm_button"
        android:id="@+id/flaseAlarmButton"
        android:layout_below="@+id/emergencyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:textSize="30dp"
        android:background="@color/background_floating_material_dark"
        android:padding="10dp"
        android:onClick="onFalseAlarmClick" />

</RelativeLayout>
