<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CrashDetection.Acitivities.SettingsCrashDetectionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crash_detection_settings"
        android:id="@+id/TittleTextSettingsCrash"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:gravity="center" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchCrashDetection"
        android:layout_below="@+id/TittleTextSettingsCrash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:textOn="@string/On"
        android:textOff="@string/Off"
        android:textSize="20sp" />


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/switchCrashDetection"
        android:layout_marginTop="15dp">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/LayoutSettingsCrashDetectionOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/crash_detection_activated"
            android:id="@+id/TextViewCrashSettingsActivated"
            android:layout_marginTop="5dp"
            android:textSize="17sp"
            android:gravity="center_horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCC"
            android:id="@+id/centerPoint2"
            android:layout_marginBottom="10dp" />

        <!-- RadioGroup para seleccionar diferentes niveles
    <RadioGroup
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupCrashDetecctionLevels"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_sensitivity"
        android:id="@+id/radioButtonCrashDetecctionLevel1"
        android:textSize="17sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_sensitivity"
        android:id="@+id/radioButtonCrashDetecctionLevel2"
        android:textSize="17sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_sensitivity"
        android:id="@+id/radioButtonCrashDetecctionLevel3"
        android:textSize="17sp" />

</RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_3_crash_levels"
            android:id="@+id/InfoTextSettingsCrash"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp"
            android:visibility="visible"
            android:paddingTop="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center_horizontal" />

-->


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchEmergencySms"
            android:layout_marginTop="30dp"
            android:textOn="@string/On"
            android:textOff="@string/Off"
            android:textSize="17sp"
            android:text="@string/sendASmsWhenAccident"
            android:checked="false" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/LayoutSettingsEmergencySms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name_sms_contact"
                android:id="@+id/contactName" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/contactPhone"
                android:text="@string/phone_sms_contact" />

<!--
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC"
                android:id="@+id/centerPoint"
                android:layout_marginBottom="10dp" />

-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_contact"
                android:id="@+id/selectionButton"
                android:onClick="initPickContacts"
                android:layout_gravity="center_horizontal"
                android:background="@color/com_facebook_likeboxcountview_border_color"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC"
                android:id="@+id/centerPoint3"
                android:layout_marginTop="30dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_medial_info_button"
                android:id="@+id/addMedicalInfo"
                android:onClick="addMedicalInfo"
                android:layout_gravity="center_horizontal"
                android:background="@color/com_facebook_likeboxcountview_border_color"
                android:layout_marginTop="33dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

                <!--
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                -->


            <!--

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/editTextEmergencySmsPhone"
                            android:hint="@string/enterAPhoneNumber"
                            android:layout_marginTop="5dp" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save"
                            android:id="@+id/buttonSavePhoneNumber"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/com_facebook_likeboxcountview_border_color"
                            android:layout_marginTop="15dp"
                            android:onClick="onSaveSmSEmergencyNumberClick" />
                        -->

        </LinearLayout>

    </LinearLayout>

</ScrollView>

</RelativeLayout>
